Fix spacing of timers

--- a/src/css/tabs/osd.css
+++ b/src/css/tabs/osd.css
@@ -526,8 +526,8 @@ button {
 
 .timers-container .timer-detail {
     padding-left: 15px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding-top: 3px;
+    padding-bottom: 3px;
 }
 
 .timers-container label {
